<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_fork"
        android:title="@string/tuning"
        android:icon="@drawable/ic_note_fork" />
    <item
        android:id="@+id/action_metronome"
        android:title="@string/metronome"
        android:icon="@drawable/ic_metronome" />
    <item
        android:id="@+id/action_about"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings" />
</menu>