...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageAppIcon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_launcher_foreground"
            android:contentDescription="@string/contentDescription_app_icon"
            app:tint="?android:attr/textColorPrimary"
            app:layout_constraintTop_toTopOf="parent"
...
