...
        app:layout_constraintEnd_toStartOf="@id/buttonPlus5"
        app:layout_constraintTop_toTopOf="@id/buttonPlus5"
        app:layout_constraintBottom_toBottomOf="@id/buttonPlus1"
        tools:ignore="HardcodedText"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/sliderBeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:enabled="false"
        app:trackColor="@color/material_on_background_disabled"
...
